--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </a>
         </div>
     </div>
-    <p class="bottom-text"> &copy; iT Mgerchick</p>
+    <p class="bottom-text"> &copy; iT Mger Arzikyan</p>
  </div>
 </body>
 </html>
