--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="block">
         <div class="img-holder"> </div>
         <h3>Mger Arzikyan</h3>
-        <p>WEB-Разработчик</p>
+        <p>Front end-Разработчик</p>
         <p class="disc"><i>Стремись к совершенству во всем, что делаешь.
            Возьми лучшее, что существует, и сделай его ещё лучше. 
             Если такого не существует, создай его</i></p>
